--- a/crane.yaml
+++ b/crane.yaml
@@ -9,7 +9,7 @@ containers:
       publish: ["8080:8080"]
       expose: ["8081"]
       cmd: ["/usr/bin/supervisord", "-c", "/etc/supervisord.conf"]
-      hostname: puppetdb.localdomain
+      hostname: puppetdb.dev.local
       detach: true
 
   puppetdb_datastore:
@@ -26,9 +26,8 @@ containers:
       volume: ["./:/host"]
       publish: ["443:443"]
       cmd: ["/usr/bin/supervisord", "-c", "/etc/supervisord.conf"]
-      hostname: foreman.localdomain
+      hostname: foreman.dev.local
       detach: true
-      link: ["puppetmaster:puppetmaster.localdomain"]
 
   foreman_datastore:
     image: iverberk/foreman:packer
@@ -44,10 +43,9 @@ containers:
       volumes-from: ["puppetmaster_datastore"]
       cmd: ["/usr/bin/supervisord", "-c", "/etc/supervisord.conf"]
       detach: true
-      hostname: puppetmaster.localdomain
+      hostname: puppetmaster.dev.local
       expose: ["8443"]
       publish: ["8140:8140"]
-      link: ["puppetdb:puppetdb.localdomain"]
 
   puppetmaster_datastore:
     image: iverberk/puppetmaster:packer
